--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "imagetracerjs": "^1.2.6",
     "lenis": "^1.1.14",
     "linkify-it": "^4.0.1",
+    "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "next": "14.0.4",
     "react": "^18",
